test/1.2/errors/T_ETMETH.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

template a {
    /// ERROR ETMETH
    method m() nothrow default {}
    method n() nothrow default {}
    parameter p = 3;
}

/// WARNING WEXPERIMENTAL
trait b {
    is a;
    /// ERROR ETMETH
    method m() default {}
    // these don't give an error, because they are not overrides
    method n();
    parameter int p;
}

/// WARNING WEXPERIMENTAL
port p0 is (b);
